# q21g-project

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  PRD.md  README.md  STRATEGY.md  TASKS.md  VERIFICATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Q21G-player-whl/: my_player.py  player_guess.py  player_helpers.py
Q21G-referee-whl/: pyproject.toml
Q21G-referee-whl/examples/: main.py  my_ai.py  referee_helpers.py  referee_scoring.py
docs/: ARCHITECTURE.md  BUDGET.md  PROMPT_ENGINEERING_LOG.md
docs/adr/: ADR-001-embedding-model.md  ADR-002-state-management.md  ADR-003-hint-generation-strategy.md  ADR-004-dual-search-strategy.md  ADR-005-paragraph-filtering.md
knowledge_base/: __init__.py  corpus_builder.py  db.py  difficulty_indexer.py  embedding_builder.py  llm_batch.py  llm_client.py  paragraph_filter.py  pdf_parser.py  sentence_extractor.py  setup.py  skill_plugin.py  vector_store.py
notebooks/: experiments.ipynb
skills/: player_guess_maker.md  player_question_generator.md  referee_hint_generator.md  referee_question_answerer.md  referee_scorer.md  warmup_solver.md
tests/: game_mocks.py  test_db_and_vectorstore.py  test_game_chain.py  test_game_edge_cases.py  test_game_simulation.py  test_knowledge_base.py  test_live_simulation.py  test_llm_client.py  test_paragraph_filter.py  test_player.py  test_player_guess.py  test_player_guess_edge.py  test_player_questions.py  test_player_warmup.py  test_referee.py  test_referee_callbacks.py  test_referee_helpers.py  test_referee_scoring.py  test_sentence_extractor.py  test_skill_plugin.py
